--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -53,15 +53,41 @@
         android:id="@+id/btnLogin"
         android:layout_width="276dp"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/etPassword"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="73dp"
+        android:backgroundTint="#299CAC"
+        android:text="Log In"
+        android:textColor="#FFFFFF" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="64dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="68dp"
+        android:layout_marginTop="125dp"
+        android:layout_marginEnd="73dp"
+        app:srcCompat="@drawable/nux_dayone_landing_logo" />
+
+    <Button
+        android:id="@+id/btnSignUp"
+        android:layout_width="276dp"
+        android:layout_height="48dp"
+        android:layout_below="@+id/btnLogin"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="68dp"
-        android:layout_marginTop="258dp"
+        android:layout_marginTop="14dp"
         android:layout_marginEnd="73dp"
-        android:layout_marginBottom="193dp"
-        android:backgroundTint="#299CAC"
-        android:text="Log In"
-        android:textColor="#FFFFFF" />
+        android:layout_marginBottom="117dp"
+        android:backgroundTint="@color/green"
+        android:text="Sign Up" />
 
 </RelativeLayout>
