--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="red">#F82E2E</color>
     <color name="blue">#299CAC</color>
+    <color name="green">#33C622</color>
 </resources>
