--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -77,8 +77,9 @@
 
     <Button
         android:id="@+id/btnSignUp"
+
         android:layout_width="276dp"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_below="@+id/btnLogin"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
@@ -86,7 +87,7 @@
         android:layout_marginStart="68dp"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="73dp"
-        android:layout_marginBottom="117dp"
+        android:layout_marginBottom="200dp"
         android:backgroundTint="@color/green"
         android:text="Sign Up" />
 
