--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -76,19 +76,18 @@
         app:srcCompat="@drawable/nux_dayone_landing_logo" />
 
     <Button
-        android:id="@+id/btnSignUp"
-
+        android:id="@+id/btnSignup"
         android:layout_width="276dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/btnLogin"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
         android:layout_marginStart="68dp"
         android:layout_marginTop="14dp"
         android:layout_marginEnd="73dp"
-        android:layout_marginBottom="200dp"
         android:backgroundTint="@color/green"
-        android:text="Sign Up" />
+        android:text="Sign Up"
+        tools:ignore="TouchTargetSizeCheck" />
+
 
 </RelativeLayout>
