--- a/app/src/main/res/layout/post_item.xml
+++ b/app/src/main/res/layout/post_item.xml
@@ -27,6 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="253dp"
         android:layout_below="@+id/divider"
+        android:scaleType="centerCrop"
         tools:srcCompat="@tools:sample/avatars" />
 
     <View
