--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,22 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/cardview_dark_background"
     tools:context=".Fragments.ProfileFragment">
 
-    <Button
-        android:id="@+id/btnSignout"
-        android:layout_width="284dp"
-        android:layout_height="wrap_content"
+
+    <ImageView
+        android:id="@+id/ivProfilePic"
+        android:layout_width="71dp"
+        android:layout_height="75dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="10dp"
+        tools:src="@tools:sample/avatars" />
+
+    <TextView
+        android:id="@+id/tvPostsCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="37dp"
+        android:layout_marginTop="23dp"
+        android:layout_toEndOf="@+id/ivProfilePic"
+        android:text="11"
+        android:textColor="#FAF6F6" />
+
+    <TextView
+        android:id="@+id/tvFollowerCount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="73dp"
+        android:layout_marginTop="23dp"
+        android:layout_toEndOf="@+id/tvPostsCount"
+        android:text="217"
+        android:textColor="#FFFFFF" />
+
+    <TextView
+        android:id="@+id/tvFollowingCount"
+        android:layout_width="40dp"
+        android:layout_height="19dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="60dp"
+        android:layout_marginTop="23dp"
+        android:layout_marginEnd="75dp"
+        android:layout_toEndOf="@+id/tvFollowerCount"
+        android:text="158"
+        android:textColor="#FFFFFF" />
+
+    <TextView
+        android:id="@+id/tvPosts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvPostsCount"
+        android:layout_marginStart="26dp"
+        android:layout_marginTop="11dp"
+        android:layout_toEndOf="@+id/ivProfilePic"
+        android:text="Posts"
+        android:textColor="#FFFFFF" />
+
+    <TextView
+        android:id="@+id/tvFollowers"
+        android:layout_width="61dp"
+        android:layout_height="23dp"
+        android:layout_below="@+id/tvFollowerCount"
+        android:layout_marginStart="43dp"
+        android:layout_marginTop="11dp"
+        android:layout_toEndOf="@+id/tvPosts"
+        android:text="Followers"
+        android:textColor="#FFFFFF" />
+
+    <TextView
+        android:id="@+id/tvFollowing"
+        android:layout_width="78dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tvFollowingCount"
+        android:layout_marginStart="31dp"
+        android:layout_marginTop="11dp"
+        android:layout_toEndOf="@+id/tvFollowers"
+        android:text="Following"
+        android:textColor="#FFFFFF" />
+
+    <Button
+        android:id="@+id/btnEditProfile"
+        android:layout_width="wrap_content"
+        android:layout_height="35dp"
+        android:layout_below="@+id/tvFollowers"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="68dp"
-        android:layout_marginTop="242dp"
+        android:layout_marginTop="22dp"
         android:layout_marginEnd="73dp"
+        android:backgroundTint="@color/blue"
+        android:text="Edit Profile" />
+
+    <View
+        android:id="@+id/divider4"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_below="@+id/btnEditProfile"
+        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="-3dp"
+        android:layout_marginTop="6dp"
+        android:background="?android:attr/listDivider" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvGridView"
+        android:layout_width="match_parent"
+        android:layout_height="390dp"
+        android:layout_above="@+id/btnSignout1"
+        android:layout_below="@+id/divider4"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="2dp"
+        android:layout_marginEnd="0dp"
+        android:layout_marginBottom="5dp" />
+
+    <Button
+        android:id="@+id/btnSignout1"
+        android:layout_width="wrap_content"
+        android:layout_height="38dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="68dp"
+        android:layout_marginEnd="73dp"
+        android:layout_marginBottom="8dp"
         android:backgroundTint="@color/green"
         android:text="Sign out" />
-
 </RelativeLayout>
