--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -17,7 +17,8 @@
         android:layout_alignParentTop="true"
         android:layout_marginStart="15dp"
         android:layout_marginTop="10dp"
-        tools:src="@tools:sample/avatars" />
+        app:srcCompat="@drawable/new_profile_picture"
+        tools:src="@drawable/instagram_profile_placeholder" />
 
     <TextView
         android:id="@+id/tvPostsCount"
@@ -95,7 +96,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_marginStart="68dp"
-        android:layout_marginTop="22dp"
+        android:layout_marginTop="56dp"
         android:layout_marginEnd="73dp"
         android:backgroundTint="@color/blue"
         android:text="Edit Profile" />
@@ -106,22 +107,24 @@
         android:layout_height="1dp"
         android:layout_below="@+id/btnEditProfile"
         android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="-3dp"
-        android:layout_marginTop="6dp"
+        android:layout_marginStart="-5dp"
+        android:layout_marginTop="1dp"
+        android:layout_marginEnd="2dp"
         android:background="?android:attr/listDivider" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvGridView"
         android:layout_width="match_parent"
-        android:layout_height="390dp"
+        android:layout_height="370dp"
         android:layout_above="@+id/btnSignout1"
         android:layout_below="@+id/divider4"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_centerHorizontal="true"
         android:layout_marginStart="0dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginTop="1dp"
         android:layout_marginEnd="0dp"
         android:layout_marginBottom="5dp" />
 
@@ -137,4 +140,17 @@
         android:layout_marginBottom="8dp"
         android:backgroundTint="@color/green"
         android:text="Sign out" />
+
+    <TextView
+        android:id="@+id/tvProfileDescription"
+        android:layout_width="280dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ivProfilePic"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginStart="21dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="110dp"
+        android:text="Raj Patel NJIT"
+        android:textColor="#FDFDFD" />
 </RelativeLayout>
